# neural_network_draw

./: LICENSE  README.md  layer.py  nueral_network_draw.py  pyproject.toml  setup.py  test_script (3).py  test_script (5).py  test_script.py
src/neural_network_draw/: __init__.py  __main__.py  _deps.py  core.py  drawNN (3).py  drawNN.py  layer (8).py  layer.py  neuralNetwork (4).py  neuralNetwork.py  neuron (11).py  neuron.py
src/neural_network_draw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/neural_netwrok_draw/: _deps.py  drawNN.py  neuralNetwork.py  neuron.py
tests/: example_1_basic_structure.py  example_2_structure_with_labels.py  example_3_low_level_full_features.py  example_4_high_level_full_features.py
