[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-network-draw"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Draw basic feed-forward neural network architecture diagrams with matplotlib"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
